[package]
name = "particle-bug"
version = "0.1.0"
authors = ["profan <robinhubner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad-particles = { git = "https://github.com/not-fl3/macroquad.git", branch = "master" }
macroquad = { git = "https://github.com/not-fl3/macroquad.git", branch = "master" }